--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
-## config file for ansible -- https://ansible.com/
+# config file for ansible -- https://ansible.com/
 # ===============================================
 
 # nearly all parameters can be overridden in ansible-playbook
@@ -8,10 +8,9 @@
 # finds first
 
 [defaults]
-
+inventory = hosts
 # some basic default values...
-
-inventory      = hosts
+#inventory      = /etc/ansible/hosts
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
@@ -55,11 +54,20 @@ inventory      = hosts
 # environment.
 # gather_timeout = 10
 
+# Ansible facts are available inside the ansible_facts.* dictionary
+# namespace. This setting maintains the behaviour which was the default prior
+# to 2.5, duplicating these variables into the main namespace, each with a
+# prefix of 'ansible_'.
+# This variable is set to True by default for backwards compatibility. It
+# will be changed to a default of 'False' in a future release.
+# ansible_facts.
+# inject_facts_as_vars = True
+
 # additional paths to search for roles in, colon separated
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-host_key_checking = False
+#host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
@@ -99,6 +107,7 @@ host_key_checking = False
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
+#log_path = /var/log/ansible.log
 log_path = result.log
 
 # default module name for /usr/bin/ansible
@@ -176,11 +185,12 @@ log_path = result.log
 # setting or adding warn=yes or warn=no to the end of the command line
 # parameter string.  This will for example suggest using the git module
 # instead of shelling out to the git command.
-command_warnings = False
+# command_warnings = False
 
 
 # set plugin path directories here, separate with colons
 #action_plugins     = /usr/share/ansible/plugins/action
+#become_plugins     = /usr/share/ansible/plugins/become
 #cache_plugins      = /usr/share/ansible/plugins/cache
 #callback_plugins   = /usr/share/ansible/plugins/callback
 #connection_plugins = /usr/share/ansible/plugins/connection
@@ -232,10 +242,17 @@ command_warnings = False
 # current IP information.
 #fact_caching = memory
 
+#This option tells Ansible where to cache facts. The value is plugin dependent.
+#For the jsonfile plugin, it should be a path to a local directory.
+#For the redis plugin, the value is a host:port:database triplet: fact_caching_connection = localhost:6379:0
+
+#fact_caching_connection=/tmp
+
+
 
 # retry files
-# When a playbook fails by default a .retry file will be created in ~/
-# You can disable this feature by setting retry_files_enabled to False
+# When a playbook fails a .retry file can be created that will be placed in ~/
+# You can enable this feature by setting retry_files_enabled to True
 # and you can change the location of the files by setting retry_files_save_path
 
 #retry_files_enabled = False
@@ -308,7 +325,7 @@ command_warnings = False
 #any_errors_fatal = False
 
 [inventory]
-# enable inventory plugins, default: 'host_list', 'script', 'yaml', 'ini'
+# enable inventory plugins, default: 'host_list', 'script', 'auto', 'yaml', 'ini', 'toml'
 #enable_plugins = host_list, virtualbox, yaml, constructed
 
 # ignore these extensions when parsing a directory as inventory source
@@ -366,7 +383,7 @@ command_warnings = False
 
 # The path to use for the ControlPath sockets. This defaults to a hashed string of the hostname,
 # port and username (empty string in the config). The hash mitigates a common problem users
-# found with long hostames and the conventional %(directory)s/ansible-ssh-%%h-%%p-%%r format.
+# found with long hostnames and the conventional %(directory)s/ansible-ssh-%%h-%%p-%%r format.
 # In those cases, a "too long for Unix domain socket" ssh error would occur.
 #
 # Example:
@@ -404,7 +421,7 @@ command_warnings = False
 
 # The -tt argument is passed to ssh when pipelining is not enabled because sudo 
 # requires a tty by default. 
-#use_tty = True
+#usetty = True
 
 # Number of times to retry an SSH connection to a host, in case of UNREACHABLE.
 # For each retry attempt, there is an exponential backoff,
@@ -419,18 +436,11 @@ command_warnings = False
 # expires, the connection is shutdown. The default value is 30 seconds.
 #connect_timeout = 30
 
-# Configures the persistent connection retry timeout.  This value configures the
-# the retry timeout that ansible-connection will wait to connect
-# to the local domain socket. This value must be larger than the
-# ssh timeout (timeout) and less than persistent connection idle timeout (connect_timeout).
-# The default value is 15 seconds.
-#connect_retry_timeout = 15
-
 # The command timeout value defines the amount of time to wait for a command
 # or RPC call before timing out. The value for the command timeout must
 # be less than the value of the persistent connection idle timeout (connect_timeout)
-# The default value is 10 second.
-#command_timeout = 10
+# The default value is 30 second.
+#command_timeout = 30
 
 [accelerate]
 #accelerate_port = 5099
@@ -451,7 +461,7 @@ command_warnings = False
 # file systems that require special treatment when dealing with security context
 # the default behaviour that copies the existing context or uses the user default
 # needs to be changed to use the file system dependent context.
-#special_context_filesystems=nfs,vboxsf,fuse,ramfs,9p
+#special_context_filesystems=nfs,vboxsf,fuse,ramfs,9p,vfat
 
 # Set this to yes to allow libvirt_lxc connections to work without SELinux.
 #libvirt_lxc_noseclabel = yes
