--- a/playbooks/roles/sfagent/tasks/upgrade.yml
+++ b/playbooks/roles/sfagent/tasks/upgrade.yml
@@ -88,6 +88,8 @@
         warn: false
 
     - include_vars: ../config-params.yml
+      ignore_errors: yes
+
     - name: generate config
       shell: ./sfagent -generate-config
       args:
@@ -123,10 +125,11 @@
         regexp: '{{item.search}}'
         replace: '{{ item.replace }}'
       with_items:
-        - { search: "key: CHANGEME" , replace: 'key: {{key}}' }
-        - { search: "appName: CHANGEME" , replace: 'appName: {{appName}}' }
-        - { search: "projectName: CHANGEME" , replace: 'projectName: {{projectName}}' }
-        - { search: "Name: CHANGEME" , replace: 'Name: {{Name}}' }
+        - { search: "key: CHANGEME" , replace: 'key: {{key | default("")}}' }
+        - { search: "appName: CHANGEME" , replace: 'appName: {{appName | default("CHANGEME")}}' }
+        - { search: "projectName: CHANGEME" , replace: 'projectName: {{projectName | default("CHANGEME")}}' }
+        - { search: "Name: CHANGEME" , replace: 'Name: {{Name | default("CHANGEME")}}' }
+        - { search: "Name: $HOSTNAME" , replace: 'Name: {{Name | default("$HOSTNAME")}}' }
 
     - name: create to env.conf
       shell: echo "PATH={{DEFAULTPATH}}" > {{AGENTDIR}}/env.conf
