Added update cache while updating linux packages

--- a/playbooks/roles/sfagent/tasks/pre-install.yml
+++ b/playbooks/roles/sfagent/tasks/pre-install.yml
@@ -23,8 +23,9 @@
 - name: Update the packages in Ubuntu
   become: true
   become_user: root
-  shell: |
-    apt-get -y update
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
   when: ansible_os_family == "Debian" or ansible_distribution == 'Ubuntu'
 
 - name: Install pre-requsites on Debian or Ubuntu(curl,wget and logrotate)
