issue: yes was used but can be replaced with true or false instead od yes or no fix: changed yes to true

--- a/playbooks/roles/sfagent/tasks/generate-config.yml
+++ b/playbooks/roles/sfagent/tasks/generate-config.yml
@@ -1,6 +1,6 @@
 ---
 - include_vars: ../config-params.yml
-  ignore_errors: yes
+  ignore_errors: true
 
 - name: generate config
   shell: ./sfagent -generate-config
