--- a/playbooks/roles/sfagent/tasks/check_jcmd.yml
+++ b/playbooks/roles/sfagent/tasks/check_jcmd.yml
@@ -7,7 +7,7 @@
             echo 'not installed'
         fi
   register: jcmd_result
-  ignore_errors: yes
+  ignore_errors: true
 
 - name: "jcmd not installed"
   debug:
