--- a/playbooks/roles/sfagent/tasks/update-config.yml
+++ b/playbooks/roles/sfagent/tasks/update-config.yml
@@ -1,6 +1,6 @@
 ---
 - include_vars: ../config-params.yml
-  ignore_errors: yes
+  ignore_errors: true
 - name: backup config.yaml to config.yaml.bak
   shell: cp config.yaml config.yaml.bak
   args:
