--- a/playbooks/roles/sfagent/tasks/install.yml
+++ b/playbooks/roles/sfagent/tasks/install.yml
@@ -95,30 +95,26 @@
   shell: ./sfagent -generate-config
   args:
     chdir: /opt/sfagent
-
-- name: config-generated.yaml verification
+  ignore_errors: true
+  register: generate_config_result 
+- name: Verify if config-generated.yaml exists
   stat:
     path: /opt/sfagent/config-generated.yaml
-  register: stat_result
-
-- name: status of the config-generated.yaml
+  register: config_sta
+- name: Display status of config generation
   ansible.builtin.debug:
-    msg: successfully generated config-generated.yaml
-  when: stat_result.stat.exists
-
-- name: status of the config-generated.yaml
-  ansible.builtin.debug:
-    msg: config-generated.yaml could not be generated
-  when: not stat_result.stat.exists
+    msg: "{{ 'Successfully generated config-generated.yaml' if generate_config_result.rc == 0 else 'config-generated.yaml could not be generated' }}"
   
-- name: copy generated config to config.yaml
+- name: Copy generated config to config.yaml
   shell: cp config-generated.yaml config.yaml
   args:
     chdir: /opt/sfagent
-
-- name: status of the config-generated.yaml
+  when: config_stat.stat.exists and generate_config_result.rc == 0
+    
+- name: Display status of copying config file
   ansible.builtin.debug:
-    msg: successfully copied config-generated.yaml to config.yaml
+    msg: "Successfully copied config-generated.yaml to config.yaml"
+  when: config_stat.stat.exists and generate_config_result.rc == 0
 
 - name: Copying back config.yaml and customer scripts
   shell: |
