--- a/playbooks/roles/sfagent/tasks/generate-config.yml
+++ b/playbooks/roles/sfagent/tasks/generate-config.yml
@@ -2,34 +2,32 @@
 - include_vars: ../config-params.yml
   ignore_errors: true
 
-- name: generate config
+- name: Generate config
   shell: ./sfagent -generate-config
   args:
     chdir: /opt/sfagent
+  ignore_errors: true
+  register: generate_config_result
 
-- name: config-generated.yaml verification
+- name: Verify if config-generated.yaml exists
   stat:
     path: /opt/sfagent/config-generated.yaml
-  register: stat_result
+  register: config_stat
 
-- name: status of the config-generated.yaml
+- name: Display status of config generation
   ansible.builtin.debug:
-    msg: successfully generated config-generated.yaml
-  when: stat_result.stat.exists
+    msg: "{{ 'Successfully generated config-generated.yaml' if generate_config_result.rc == 0 else 'config-generated.yaml could not be generated' }}"
 
-- name: status of the config-generated.yaml
-  ansible.builtin.debug:
-    msg: config-generated.yaml could not be generated
-  when: not stat_result.stat.exists
-  
-- name: copy generated config to config.yaml
+- name: Copy generated config to config.yaml
   shell: cp config-generated.yaml config.yaml
   args:
     chdir: /opt/sfagent
+  when: config_stat.stat.exists and generate_config_result.rc == 0
 
-- name: status of the config-generated.yaml
+- name: Display status of copying config file
   ansible.builtin.debug:
-    msg: successfully copied config-generated.yaml to config.yaml
+    msg: "Successfully copied config-generated.yaml to config.yaml"
+  when: config_stat.stat.exists and generate_config_result.rc == 0
 
 - name: Replace values in config file
   ansible.builtin.replace:
