--- a/playbooks/roles/sfagent/tasks/validate.yml
+++ b/playbooks/roles/sfagent/tasks/validate.yml
@@ -1,8 +1,10 @@
+---
 - name: Check sfagent service status
-  ansible.builtin.service_facts:
-    filters: name=sfagent
-  register: service_status
+  ansible.builtin.command: systemctl is-active --quiet sfagent
+  register: sfagent_status
+  failed_when: sfagent_status.rc != 0
 
 - name: Report sfagent service status
   ansible.builtin.debug:
-    msg: "Service sfagent is {{ 'running.' if service_status.ansible_facts.services['sfagent'].state == 'active' else 'not running. Check service sfagent status or systemctl status sfagent.' }}"
+    msg: "Service sfagent is {{ 'running.' if sfagent_status.rc == 0 else 'not running. Check service sfagent status or systemctl status sfagent.' }}"
+
