Issue: ansible script to support installation of sfagent on systems with arm architecture
Root cause: enhancement
Changes made: i) Added check to download and install fluentbit as per architecture during installation and upgrade
              ii) Added check to download and install sfagent as per architecture during installation and upgrade
Testcases:
i) sfagent installation via ansible script on amd64(x86_64) architecture - sfagent downloaded and installed successfully, correct fluentbit binary installed
ii) sfagent installation via ansible script on amd64(aarch64) architecture - sfagent downloaded and installed successfully, correct fluentbit binary installed

--- a/playbooks/roles/sfagent/tasks/install.yml
+++ b/playbooks/roles/sfagent/tasks/install.yml
@@ -104,7 +104,7 @@
 - name: unzip sfagent
   shell: | 
     if [ "{{ ansible_architecture }}" != "aarch64" ] ; then
-      tar -zxvf /opt/sfagent/sfagent*linux_{{ ansible_architecture }}.tar.gz 
+      tar -zxvf /opt/sfagent/sfagent*linux_{{ ansible_architecture }}.tar.gz >/dev/null 
     elif [ "{{ ansible_architecture }}" == "aarch64" ] ; then
       tar -zxvf sfagent*linux_arm64.tar.gz >/dev/null
     fi
